--- a/style.css
+++ b/style.css
@@ -20,7 +20,91 @@ body {
 
 /* Footer */
 .site-footer{
-    margin-top: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+/*Footer Menu*/
+
+.site-footer {
+  height: 243px;
+  border-top: 5px solid #2a3342;
+}
+
+.footer-logo {
+  float: left;
+}
+
+.social-media {
+  display: inline-flex;
+  list-style: none;
+  margin-top: 60px;
+  margin-bottom: 50px;
+}
+
+.fnav {
+  display: inline-flex;
+  list-style: none;
+}
+
+.flink {
+  color: #2a3342;
+}
+
+ul.fnav li {
+  margin-right: 20px;
+  
+}
+
+
+.flo {
+  float: right;
+}
+
+
+ul.social-media li {
+  margin-right: 10px;
+}
+
+.address {
+  float: left;
+  font-family: Taviraj;
+  font-style: italic;
+  font-size: 12px;
+  margin-top: 20px;
+}
+
+.email {
+  font-family: Taviraj;
+  font-style: italic;
+  margin-top: 10px;
+}
+
+.phone {
+  font-family: Taviraj;
+  font-style: italic;
+}
+
+.contact-info {
+  float: left;
+  font-family: Taviraj;
+}
+
+.lt {
+  margin-left: 100px; 
+}
+
+.rt {
+  margin-right: 100px;
+}
+
+.fcontact {
+  text-align: center;
+  max-width: 379px;
+}
+
+img.logoft {
+  margin-top: 30px;
 }
 
 
@@ -96,6 +180,7 @@ article.post {
   padding: 0;
   font-size: 16px;
   color: #2a3342;
+  text-align: center;
  
 }
 .site-nav ul:before,
@@ -131,6 +216,10 @@ color: #2a3342;
   margin-right: 141px; 
 }
 
+.site-nav {
+  margin-left: 150px;
+}
+
 
 /*Header Menu*/
 
@@ -146,16 +235,17 @@ color: #2a3342;
 .jumbo-image {
   background-image: url("images/hp_jumbo_pattern.png");
   height: 292px;
-  padding-top: 100px;
+  padding-top: 30px;
   margin-top: 0;
-  width: 1140px;
 }
 
 .blurb1 {
-  font-size: 20px;
-  margin-right: 200px;
-  margin-left:  200px;
-  margin-bottom: 55px;
+  text-align: center;
+  font-size: 24px;
+  margin-right: 100px;
+  margin-left:  100px;
+  font-family: Playfair DC;
+  color: #2a3342;
 }
 
 .tag-line {
@@ -184,50 +274,7 @@ color: #2a3342;
   color: rgb(255, 255, 255);
 }
 
-/*Footer Menu*/
 
-.site-footer {
-  height: 243px;
-  border-top: 5px solid #2a3342;
-}
-
-.footer-logo {
-  float: left;
-}
-
-.social-media {
-  display: inline-flex;
-  list-style: none;
-  float: right;
-}
-
-ul.social-media li {
-  margin-right: 10px;
-}
-
-.address {
-  float: left;
-  font-family: Taviraj;
-  font-style: italic;
-  font-size: 12px;
-  margin-top: 20px;
-}
-
-.email {
-  font-family: Taviraj;
-  font-style: italic;
-  margin-top: 10px;
-}
-
-.phone {
-  font-family: Taviraj;
-  font-style: italic;
-}
-
-.contact-info {
-  float: left;
-  font-family: Taviraj;
-}
 
 /*Page Layout*/
 article.page h2 {
@@ -246,7 +293,7 @@ article.page h2 {
 
 }
 
-p img.hero {
+img.hero {
   width: 100%;
   height: 648px;
 }
@@ -455,6 +502,130 @@ p img.hero {
   top: 0;
 }
 
+/* contact-page */
+
+
+.contact-h {
+  text-align: center;
+  color: #80b144;
+  font-family: Taviraj;
+  font-size: 40px;
+  margin-bottom: 50px;
+}
+.contact-p {
+  text-align: center;
+  font-size: 24px;
+  font-family: Playfair DC;
+  color: #2a3342;
+}
+
+.contact-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 300px;
+  align-content: center;
+  align-items: center;
+  justify-items: center;
+  
+}
+
+.icon {
+  font-size: 50px;
+  text-align: center;
+  color: #80b144;
+  margin-top: 20px; 
+  align-self: center;
+  
+}
+
+.head {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
 
 
 
+/* about */
+
+html {
+  line-height: 1.618;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100vh;
+  
+}
+
+.section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  position: relative;
+  
+.section {
+  width: 50%;
+}
+
+.section__img {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.section__img__inner {
+  height: 100vh;
+  position: fixed;
+  left: 5%;
+  width: 40%;
+  top: 0;
+  mix-blend-mode: multiply;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+.section__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+.section__text {
+  padding: 5vw;
+}
+
+.section__img__inner {
+  -webkit-filter: blur(30px);
+          filter: blur(30px);
+  opacity: 0;
+  background-position: 50% 40%;
+  -webkit-transition: opacity .6s ease, background-position 0.8s ease, -webkit-filter .6s ease;
+  transition: opacity .6s ease, background-position 0.8s ease, -webkit-filter .6s ease;
+  transition: filter .6s ease, opacity .6s ease, background-position 0.8s ease;
+  transition: filter .6s ease, opacity .6s ease, background-position 0.8s ease, -webkit-filter .6s ease;
+}
+
+.section.active .section__img__inner {
+  opacity: 1;
+  background-position: 50% 50%;
+  -webkit-filter: blur(0);
+          filter: blur(0);
+}
+
+h2 {
+  font-size: 3vw;
+  margin-bottom: 0.5em;
+  margin-top: 0;
+}
