--- a/style.css
+++ b/style.css
@@ -538,94 +538,37 @@ img.hero {
   
 }
 
-.head {
-  border-radius: 50%;
-  width: 300px;
-  height: 300px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-
-}
-
 
 
 /* about */
 
-html {
-  line-height: 1.618;
+.hi {
+  font-family: Playfair Display SC;
+  font-weight: bold;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  text-align: center;
 }
 
-.background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100vh;
-  
+.section_img {
+  border-radius: 50%;
+  height: auto;
+  width: 25%;
+  display: block;
+  margin-right:55px; 
+  float: left;
+  shape-outside:circle();
+  border: 1px solid #2a3342;
+
 }
 
-.section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 100vh;
-  position: relative;
-  
-.section {
-  width: 50%;
+
+.section_text {
+  line-height: 1.62em;
+  font-size: 24px;
+  font-family: Playfair Display SC;
 }
 
-.section__img {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.section__img__inner {
-  height: 100vh;
-  position: fixed;
-  left: 5%;
-  width: 40%;
-  top: 0;
-  mix-blend-mode: multiply;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-.section__body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-}
-.section__text {
-  padding: 5vw;
-}
-
-.section__img__inner {
-  -webkit-filter: blur(30px);
-          filter: blur(30px);
-  opacity: 0;
-  background-position: 50% 40%;
-  -webkit-transition: opacity .6s ease, background-position 0.8s ease, -webkit-filter .6s ease;
-  transition: opacity .6s ease, background-position 0.8s ease, -webkit-filter .6s ease;
-  transition: filter .6s ease, opacity .6s ease, background-position 0.8s ease;
-  transition: filter .6s ease, opacity .6s ease, background-position 0.8s ease, -webkit-filter .6s ease;
-}
-
-.section.active .section__img__inner {
-  opacity: 1;
-  background-position: 50% 50%;
-  -webkit-filter: blur(0);
-          filter: blur(0);
-}
-
-h2 {
-  font-size: 3vw;
-  margin-bottom: 0.5em;
-  margin-top: 0;
+span.green {
+  color: #80b144;
 }
